--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/global.css">
 </head>
 
 <body>
 
     <div id="app">
         <!-- Modal -->
-        <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
+        <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+            data-bs-backdrop="static">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -25,20 +27,24 @@
                     <div class="modal-body">
 
                         <div class="row">
-                            <div class="col ghost" @click="choseGhost(1)" :class="{checkGhost:checkGhost == 1}">
+                            <div class="col ghost" @click="picUrl = './pic/ghost_1.png'"
+                                :class="{checkGhost:picUrl == './pic/ghost_1.png'}">
                                 <img src="./pic/ghost_1.png" alt="">
                             </div>
-                            <div class="col ghost" @click="choseGhost(2)" :class="{checkGhost:checkGhost == 2}">
+                            <div class="col ghost" @click="picUrl = './pic/ghost_2.png'"
+                                :class="{checkGhost:picUrl == './pic/ghost_2.png'}">
                                 <img src="./pic/ghost_2.png" alt="">
                             </div>
                         </div>
 
                         <div class="row">
-                            <div class="col ghost" @click="choseGhost(3)" :class="{checkGhost:checkGhost == 3}">
+                            <div class="col ghost" @click="picUrl = './pic/ghost_3.png'"
+                                :class="{checkGhost:picUrl == './pic/ghost_3.png'}">
                                 <img src="./pic/ghost_3.png" alt="">
                             </div>
-                            <div class="col ghost" @click="choseGhost(4)" :class="{checkGhost:checkGhost == 4}">
-                                <!-- <img src="./pic/ghost_2.png" alt=""> -->
+                            <div class="col ghost" @click="picUrl = './pic/ghost_4.png'"
+                                :class="{checkGhost:picUrl  == './pic/ghost_4.png'}">
+                                <img src="./pic/ghost_4.png" alt="">
                             </div>
                         </div>
 
@@ -52,11 +58,19 @@
                     <div class="modal-footer">
                         <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
                         <button type="button" class="btn btn-primary" @click="login"
-                            :disabled="!this.userName || !this.checkGhost">登入</button>
+                            :disabled="!this.userName || !this.picUrl">登入</button>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!-- loading -->
+        <div class="d-flex justify-content-center spinner-custom" v-if="loading">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
@@ -75,36 +89,28 @@
                     userName: '',
                     checkGhost: '',
                     picUrl: "",
-                    scaleX:""
+                    scaleX: "",
+                    loading:false
                 }
             },
             methods: {
                 login() {
+                    this.loading = true
                     axios.post("/login", { userName: this.userName, picUrl: this.picUrl,scaleX:this.scaleX })
                         .then((res) => {
                             sessionStorage.setItem(`userInfo`, JSON.stringify(res.data))
                             window.location.href = "http://localhost:3000/room.html"
+
+                            this.loading = false
                         })
                 },
-                choseGhost(type) {
-                    this.checkGhost = type
-
-                    switch (type) {
-                        case 1: this.picUrl = "./pic/ghost_1.png",this.scaleX= -1; break;
-                        case 2: this.picUrl = "./pic/ghost_2.png",this.scaleX= 1; break;
-                        case 3: this.picUrl = "./pic/ghost_3.png",this.scaleX= -1; break;
-                    }
-                }
             },
             computed: {},
             mounted() {
-                // const socket = io();
                 const myModal = new bootstrap.Modal('#loginModal', {
                     keyboard: false
                 })
                 myModal.show()
-                // const modalToggle = document.getElementById('toggleMyModal');
-                // myModal.show(modalToggle)
             },
         }
 
