--- a/room.html
+++ b/room.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/room.css">
+    <link rel="stylesheet" href="/css/global.css">
 </head>
 
 <body>
@@ -38,10 +39,11 @@
             </div>
             <!-- 聊天輸入區 -->
             <div class="chat row">
-                <ul class="chat-record">
-                    <li style="height: 24px;" v-show="chatRecord.length <= 1"></li>
-                    <li style="height:24px" v-show="chatRecord.length <= 2"></li>
-                    <li v-for="item in chatRecord">{{ item.message }} {{chatRecord.length}}</li>
+                <ul class="chat-record" ref="chatRecord">
+                    <li v-show="chatRecord.length <= 1"></li>
+                    <li v-show="chatRecord.length <= 2"></li>
+                    <li v-show="chatRecord.length <= 3"></li>
+                    <li v-for="item in chatRecord">{{item.name}} : {{ item.message }}</li>
                 </ul>
                 <input type="texg" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
                     v-model="message" @keyup.enter="sendMessage" placeholder="請出入文字訊息">
@@ -50,6 +52,15 @@
                 <li v-for="item in notifyList">{{item}}</li>
             </ul>
         </div>
+
+
+        <!-- loading -->
+        <div class="d-flex justify-content-center spinner-custom" v-if="loading">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+
     </div>
 
 
@@ -85,10 +96,12 @@
                     chatCloudPosition: [],
                     notifyList: [],
                     chatRecord: [],
+                    loading:false
                 }
             },
             methods: {
                 callBackendAPI(url, param, callBack) {
+                    this.loading = true
                     return axios.get(url, {
                         params: {
                             param
@@ -96,14 +109,16 @@
                     })
                         .then((res) => {
                             callBack(res)
+                            this.loading = false
                         })
                         .catch((err) => {
                             console.log("err msg", err)
+                            this.loading = false
                         })
                 },
                 initChartRoom() {
                     this.callBackendAPI("/init", null, (res) => {
-                        console.log('res',res.data)
+                        console.log('res', res.data)
                         this.roleData = res.data.roleData
                         this.chatRecord = res.data.chatData
                         this.socket.emit("move", { roleData: this.roleData, token: this.token })
@@ -112,6 +127,7 @@
                         this.$nextTick(() => {
                             let role = this.$refs.role
                             this.getChatCloudPosition()
+                            this.$refs.chatRecord.scrollTop = Number.MAX_SAFE_INTEGER
                             // gsap.to(role[this.roleIndex], {
                             //     x: this.roleData[this.roleIndex].x,
                             //     duration: 0
@@ -198,14 +214,20 @@
                     }
                 },
                 sendMessage() {
-                    let param = {
-                        name: this.userInfo.name,
-                        token: this.token,
-                        message: this.message
+                    if (this.message) {
+                        let param = {
+                            name: this.userInfo.name,
+                            token: this.token,
+                            message: this.message
+                        }
+
+                        setTimeout(() => {
+                            this.$refs.chatRecord.scrollTop = Number.MAX_SAFE_INTEGER
+                        }, 100)
+                        this.socket.emit("chat", param)
+                        this.clearMessage(this.roleIndex, this.message)
+                        this.message = ""
                     }
-                    this.socket.emit("chat", param)
-                    this.clearMessage(this.roleIndex, this.message)
-                    this.message = ""
                 },
                 clearMessage(index, message) {
                     let recordMessage = message;
@@ -267,6 +289,13 @@
                     this.notifyList.push(res.message)
                 })
 
+                /**
+                 * res.type
+                 * 1  更新整體腳色資料
+                 * 2  更新聊天及設定聊天雲
+                 * 3  確認玩家是否還在上
+                 * 4  更新聊天室紀錄
+                */
                 this.socket.on("update", (res) => {
                     switch (res.type) {
                         case 1:
